Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -306,7 +306,7 @@
    "outputs": [],
    "source": [
     "# domgross is the outcome variable\n",
-    "import"
+    "from sklearn."
    ]
   },
   {
