--- a/index.ipynb
+++ b/index.ipynb
@@ -306,7 +306,7 @@
    "outputs": [],
    "source": [
     "# domgross is the outcome variable\n",
-    "from sklearn."
+    "from sklearn.model_selection import train_test_split\n"
    ]
   },
   {
