Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -306,7 +306,8 @@
    "outputs": [],
    "source": [
     "# domgross is the outcome variable\n",
-    "from sklearn.model_selection import train_test_split\n"
+    "from sklearn.model_selection import train_test_split\n",
+    "X_train, X_test, y_"
    ]
   },
   {
