--- a/index.ipynb
+++ b/index.ipynb
@@ -307,7 +307,7 @@
    "source": [
     "# domgross is the outcome variable\n",
     "from sklearn.model_selection import train_test_split\n",
-    "X_train, X_test, y_train, y_test = train_test_split(pd_df.dr)"
+    "X_train, X_test, y_train, y_test = train_test_split(pd_df.drop('domgross'),pd_df['domgr'])"
    ]
   },
   {
