--- a/index.ipynb
+++ b/index.ipynb
@@ -323,7 +323,7 @@
    "source": [
     "# domgross is the outcome variable\n",
     "from sklearn.model_selection import train_test_split\n",
-    "X_train, X_test, y_train, y_test = train_test_split(pd_df.drop('domgross'),pd_df['domgross'])"
+    "X_train, X_test, y_train, y_test = train_test_split(y=pd_df['domgross'])"
    ]
   },
   {
