--- a/index.ipynb
+++ b/index.ipynb
@@ -323,7 +323,8 @@
    "source": [
     "# domgross is the outcome variable\n",
     "from sklearn.model_selection import train_test_split\n",
-    "y = pd_df['domg']\n",
+    "y = pd_df['domgross']\n",
+    "X = pd_df.drop('domgross')\n",
     "X_train, X_test, y_train, y_test = train_test_split(y=pd_df['domgross'],x=pd_df.drop('domgross'))"
    ]
   },
