--- a/index.ipynb
+++ b/index.ipynb
@@ -324,7 +324,7 @@
     "# domgross is the outcome variable\n",
     "from sklearn.model_selection import train_test_split\n",
     "y = pd_df['domgross']\n",
-    "X = pd_df.drop(['domgross'])\n",
+    "X = pd_df.drop('domgross')\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y)"
    ]
   },
