Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -342,7 +342,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from"
+   ]
   },
   {
    "cell_type": "markdown",
