--- a/index.ipynb
+++ b/index.ipynb
@@ -343,7 +343,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn."
+    "from sklearn.linear_model import LinearRegression\n"
    ]
   },
   {
