--- a/index.ipynb
+++ b/index.ipynb
@@ -343,7 +343,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.linear_model import LinearRegression\n"
+    "from sklearn.linear_model import LinearRegression\n",
+    "lr = LinearRegression()\n"
    ]
   },
   {
