--- a/index.ipynb
+++ b/index.ipynb
@@ -344,7 +344,9 @@
    "outputs": [],
    "source": [
     "from sklearn.linear_model import LinearRegression\n",
-    "lr = LinearRegression()\n"
+    "lr = LinearRegression()\n",
+    "lr.fit(X_train, y_train)\n",
+    "lr."
    ]
   },
   {
