--- a/index.ipynb
+++ b/index.ipynb
@@ -339,14 +339,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 0.42564109, -0.08645035,  0.15209989,  0.44885837])"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from sklearn.linear_model import LinearRegression\n",
     "lr = LinearRegression()\n",
     "lr.fit(X_train, y_train)\n",
-    "lr."
+    "lr.coef_"
    ]
   },
   {
