--- a/index.ipynb
+++ b/index.ipynb
@@ -384,7 +384,7 @@
    "source": [
     "import matplotlib.pyplot as plt\n",
     "%matplotlib inline\n",
-    "# your code here"
+    "# your code here\n"
    ]
   },
   {
