--- a/index.ipynb
+++ b/index.ipynb
@@ -384,7 +384,8 @@
    "source": [
     "import matplotlib.pyplot as plt\n",
     "%matplotlib inline\n",
-    "# your code here\n"
+    "# your code here\n",
+    "y_hat_"
    ]
   },
   {
