--- a/index.ipynb
+++ b/index.ipynb
@@ -378,14 +378,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt\n",
     "%matplotlib inline\n",
     "# your code here\n",
-    "y_hat_"
+    "y_hat_train = lr.predict(X_train)\n"
    ]
   },
   {
