Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -385,7 +385,8 @@
     "import matplotlib.pyplot as plt\n",
     "%matplotlib inline\n",
     "# your code here\n",
-    "y_hat_train = lr.predict(X_train)\n"
+    "y_hat_train = lr.predict(X_train)\n",
+    "plt.plot(X_train,)"
    ]
   },
   {
