Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -386,7 +386,8 @@
     "%matplotlib inline\n",
     "# your code here\n",
     "y_hat_train = lr.predict(X_train)\n",
-    "plt.plot(X_train,)"
+    "plt.plot(X_train, y_hat_train)\n",
+    "plt.scatter(X_train, y)"
    ]
   },
   {
