--- a/index.ipynb
+++ b/index.ipynb
@@ -413,7 +413,7 @@
     "%matplotlib inline\n",
     "# your code here\n",
     "y_hat_train = lr.predict(X_train)\n",
-    "plt.plot(X_train, y_hat_train)\n",
+    "plt.plot(X_train, y_train)\n",
     "plt.scatter(X_train, y_train)"
    ]
   },
